tests/baselines/reference/constructorOverloads6.errors.txt
tests/cases/compiler/constructorOverloads6.ts(4,25): error TS1111: A constructor implementation cannot be declared in an ambient context.


==== tests/cases/compiler/constructorOverloads6.ts (1 errors) ====
    declare class FooBase {
        constructor(s: string);
        constructor(n: number);
        constructor(x: any) {
                            ~
!!! error TS1111: A constructor implementation cannot be declared in an ambient context.
    
        }
    	bar1():void;
    }
    
     declare class Foo extends FooBase {
        constructor(s: string);
        constructor(n: number);
        constructor(x: any, y?:any);
    
        bar1():void;
    }
    
    var f1 = new Foo("hey");
    var f2 = new Foo(0);
    var f3 = new Foo(f1);
    var f4 = new Foo([f1,f2,f3]);
    
    f1.bar1();
    